@@ -1,8 +1,10 @@
 linuxsampler (0.5.1-1) unstable; urgency=low
 
-  * new release
+  * New release.
+  * DSSI and LV2 plugin binaries of the sampler now included with
+    liblinuxsampler package.
 
- -- Christian Schoenebeck <cuse@users.sourceforge.net>  Thu, 06 Dec 2007 18:45:21 +0100
+ -- Christian Schoenebeck <cuse@users.sourceforge.net>  Fri, 27 Mar 2009 11:06:01 +0100
 
 linuxsampler (0.5.0-1) unstable; urgency=low
 
